--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,37 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
 <body>
     <div id="app">
+
     </div>
+
+    <footer id="miembros" class="row bg-secondary text-white pt-3 pl-3 pr-3" >
+        <div class="col-6 ">
+            <p>El actual crecimiento del alcance de la tegnologia de la informacion nos motivo a querer estar a la
+                vanguardia en este campo.</p>
+            <a class=" text-light" href="https://github.com/AlbertDeHoz/semana-1-141">Enlace Github</a>
+        </div>
+        <div class="class-6">
+            <!--<nav class="participantes">-->
+            <ul class="equipo">
+                <li>Leandro Rodriguez. leandrorovi.lr@gmail.com</li>
+                <li>Nicolay Rivera. nicolayrivera@gmail.com</li>
+                <li>Alberto Alonso De la Hoz. aealonso@mail.uniatlantico.edu.co</li>
+                <li>Emanuel Valenciano. eevalenciano@misena.edu.co</li>
+            </ul>
+            <!--</nav>-->
+        </div>
+        <div class="col-12 bg-dark text-center">
+            <p> &copy; 2020 Copyright DAD</p>
+        </div>
+    </footer>
 </body>
+<script type="text/javascript" src="../src/main.js"></script>
+<script type="text/javascript" src="../src/app.js"></script>
 
 </html>
