--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <div class="col-6 ">
             <p>El actual crecimiento del alcance de la tegnologia de la informacion nos motivo a querer estar a la
                 vanguardia en este campo.</p>
-            <a class=" text-light" href="https://github.com/AlbertDeHoz/semana-1-141">Enlace Github</a>
+            <a class=" text-light" href="https://github.com/AlbertDeHoz/semana-2-141.git">Enlace Github</a>
         </div>
         <div class="class-6">
             <!--<nav class="participantes">-->
