--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <title>PROYECTO SPRINT 2</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
 
@@ -23,7 +22,7 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="Imagenes_servicios/actualizacion.jpg" class="d-block w-100" alt="..." width="700" height="500">
+                            <img src="Imagenes_servicios/actualizacion.jpg" class="d-block w-100" alt="..." height="500">
                             <div class="carousel-caption d-none d-md-block">
                               <h5>ACTUALIZACION</h5>
                               <p>Renueva las versiones del software instalado en las entidades públicas y privadas que
@@ -34,7 +33,7 @@
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Imagenes_servicios/licenciamiento.jpg" class="d-block w-100" alt="..."width="700" height="500">
+                            <img src="Imagenes_servicios/licenciamiento.jpg" class="d-block w-100" alt="..." height="500">
                             <div class="carousel-caption d-none d-md-block">
                               <h5>LICENCIAMIENTO</h5>
                               <p>Permite a personas naturales o jurídicas adquirir el derecho de uso del software. De
@@ -95,11 +94,6 @@
         </div>
     </footer>
 <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
-<script type="text/javascript" src="../src/main.js"></script>
-<script type="text/javascript" src="../src/app.js"></script>
 
 </html>
