Correccion de imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,16 @@
   <nav class="navbar fixed-top navbar-light bg-light justify-content-end">
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Inicio</a>
+        <a class="nav-link active" href="#services">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Servicios</a>
+        <a class="nav-link" href="#services">Servicios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Noticias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">miembros</a>
+        <a class="nav-link" href="#team">miembros</a>
       </li>
     </ul>
   </nav>
