--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   </nav>
     <!--seccion de servicios-->
     <section id="services" class="servicios">
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
             <div class="row">
                 <div class="col-sm-12">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -110,6 +110,8 @@
         </div>
     </footer>
 <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
 </html>
