--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="#services">Servicios</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Noticias</a>
+        <a class="nav-link" href="#news">Noticias</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#team">miembros</a>
@@ -89,7 +89,7 @@
 
     </div>
     <!--seccion footer-->
-    <footer id="miembros" class="row bg-secondary text-white pt-3 pl-3 pr-3" >
+    <footer id="footer" class="row bg-secondary text-white pt-3 pl-3 pr-3" >
         <div class="col-6 ">
             <p>El actual crecimiento del alcance de la tegnologia de la informacion nos motivo a querer estar a la
                 vanguardia en este campo.</p>
@@ -110,6 +110,8 @@
         </div>
     </footer>
 <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
 </html>
