--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
-<body>
-  <nav class="navbar fixed-top navbar-light bg-light justify-content-end">
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link active" href="#services">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#services">Servicios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#news">Noticias</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#team">miembros</a>
-      </li>
-    </ul>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pr-4">
+  <a class="navbar-brand" href="#">semana-2-141</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#services">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#services">Servicos</a>
+      <a class="nav-item nav-link" href="#news">Sobre Nosotros</a>
+      <a class="nav-item nav-link" href="#team">Equipo</a>
+    </div>
+  </div>
+</nav>
     <!--seccion de servicios-->
     <section id="services" class="servicios">
         <div class="container-fluid px-0">
